--- a/CosasPollo/style.css
+++ b/CosasPollo/style.css
@@ -35,7 +35,14 @@ body{
     }
 }
 
+#carouselExampleIndicators{
+    max-width: 500px;
+    object-fit: cover;
+    padding-top: 40px;
+    
 
+
+}
 
 
 
