--- a/CosasPollo/styles/Style_galeria.css
+++ b/CosasPollo/styles/Style_galeria.css
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
@@ -6,78 +5,83 @@ body {
     overflow-x: hidden;
 }
 
-
 /*===================MENU==========================*/
 
- #menu a, button{
-     font-size: 18px !important;
-     font-weight: 600;
-    
- }
+#menu a, button {
+    font-size: 18px !important;
+    font-weight: 600;
+}
 
- #menu a{
-     color:#3f3f3f;
- }
+#menu a {
+    color: #3f3f3f;
+}
 
 /*=========================FOOTER================================*/
 
 footer {
     background: #1b2a4e;
-    min-height: 100px;;
+    min-height: 100px;
 }
-footer p{
-    color:#f3f3f3;
-    text-align:center;
+
+footer p {
+    color: #f3f3f3;
+    text-align: center;
 }
-#iconos  i {
+
+#iconos i {
     font-size: 26px;
     padding: 0 8px;
-    color:#f3f3f3;
+    color: #f3f3f3;
 }
-
-
-
 
 /*===================MENU==========================*/
 
- #menu a, button{
-     font-size: 18px !important;
-     font-weight: 600;
-    
- }
+#menu a, button {
+    font-size: 18px !important;
+    font-weight: 600;
+}
 
- #menu a{
-     color:#3f3f3f;
-     
- }
+#menu a {
+    color: #3f3f3f;
+}
+
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
     list-style: none;
     padding: 0;
-  }
-  
-  .card {
+}
+
+.card {
     text-align: center;
-  }
-  
-  .card img {
-    max-width: 100%; /* Máximo ancho del contenedor */
-    max-height: 200px; /* Máximo alto deseado */
-    height: auto; /* Para mantener la proporción de la imagen */
-  }
-  
-  /* Estilos adicionales para la tarjeta */
-  .card h3 {
-    margin-top: 10px;
-  }
-  
-  .card p {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%; /* Asegura que todas las tarjetas tengan la misma altura */
+    border: 1px solid #e0e0e0; /* Añade un borde para mejorar la apariencia */
+    border-radius: 8px; /* Añade bordes redondeados */
+    overflow: hidden; /* Evita que el contenido desborde */
+}
+
+.card img {
+    max-width: 100%;
+    max-height: 200px;
+    height: auto;
+    object-fit: cover; /* Ajusta la imagen para que cubra el espacio sin deformarse */
+}
+
+.card h3 {
     margin: 10px 0;
-  }
-  
-  .card .add-to-cart {
+    font-size: 18px;
+}
+
+.card p {
+    margin: 10px 0;
+    font-size: 14px;
+}
+
+.card .add-to-cart {
     background-color: #4CAF50;
     color: white;
     border: none;
@@ -89,11 +93,14 @@ footer p{
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
-  }
-  .filters {
+    align-self: flex-end; /* Alinea el botón "Agregar al carrito" hacia abajo */
+}
+
+.filters {
     text-align: center;
     margin-bottom: 20px;
 }
+
 .filters label, .filters select {
     display: inline-block;
     margin-right: 10px;
