--- a/CosasPollo/styles/Style_galeria.css
+++ b/CosasPollo/styles/Style_galeria.css
@@ -1,26 +1,45 @@
+/*===============Propiedades Globales================*/
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-/* CSS global */
+
 body {
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
 }
 
-/* Estilos para el navbar */
-.gallery-header {
-    background-color: #1b2a4e;
-    padding: 10px 0;
-    font-family: 'Montserrat', sans-serif; /* Agregamos esta regla para asegurar la misma fuente */
+
+/*===================MENU==========================*/
+
+ #menu a, button{
+     font-size: 18px !important;
+     font-weight: 600;
+    
+ }
+
+ #menu a{
+     color:#3f3f3f;
+     
+ }
+
+ 
+/*=========================FOOTER================================*/
+
+footer {
+    background: #1b2a4e;
+    min-height: 100px;;
+}
+footer p{
+    color:#f3f3f3;
+    text-align:center;
+}
+#iconos  i {
+    font-size: 26px;
+    padding: 0 8px;
+    color:#f3f3f3;
 }
 
-.gallery-header a {
-    color: #f3f3f3;
-    font-weight: 600;
-}
 
-.gallery-header a:hover {
-    color: #ffffff;
-    text-decoration: underline;
-}
+
 
 /* Estilos para el contenido de la galería */
 .filters {
@@ -84,19 +103,4 @@ body {
     align-self: flex-end; 
 }
 
-/* Estilos para el footer */
-.footer {
-    background: #1b2a4e;
-    min-height: 100px;
-}
 
-.footer p {
-    color: #f3f3f3;
-    text-align: center;
-}
-
-#iconos i {
-    font-size: 26px;
-    padding: 0 8px;
-    color: #f3f3f3;
-}
