--- a/CosasPollo/styles/style_nosotros.css
+++ b/CosasPollo/styles/style_nosotros.css
@@ -1,5 +1,3 @@
-/*===============Propiedades Globales================*/
-
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 
 body {
@@ -39,39 +37,8 @@ footer p{
 }
 
 
+/* c----------------------------------------------------------------------- */
 
-
-
-.card-title {
-    text-align: center; 
+.card{
+    background-color: rgb(231, 240, 238);
 }
-.card {
-    max-width: 400px; /* Establece el ancho máximo de la tarjeta */
-    margin: auto; /* Centra la tarjeta horizontalmente */
-}
-
-
-body {
-    position: relative; /* Asegura que los pseudo-elementos se posicionen correctamente */
-    height: 100vh;
-    margin: 0;
-    overflow: hidden; /* Evita el desplazamiento horizontal */
-}
-
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Color oscuro con opacidad */
-    transition: opacity 1s; /* Agrega una transición suave para la opacidad */
-}
-
-.overlay {
-    position: relative; /* Asegura que el contenido esté por encima de la superposición */
-    z-index: 1; /* Asegura que el contenido esté por encima de la superposición */
-}
-
-
