--- a/CosasPollo/styles/style_nosotros.css
+++ b/CosasPollo/styles/style_nosotros.css
@@ -39,6 +39,32 @@ footer p{
 
 /* c----------------------------------------------------------------------- */
 
-.card{
+/* .card{
     background-color: rgb(231, 240, 238);
+} */
+
+.card {
+    background-color: rgb(231, 240, 238);
+    border: none; 
+    border-radius: 10px; 
+    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1); 
 }
+
+.card-title {
+    font-size: 24px; 
+    font-weight: bold; 
+    margin-bottom: 30px; 
+}
+
+.card-text {
+    font-size: 16px;
+    line-height: 1.7;
+    color: #444; 
+}
+
+.card-body {
+    padding: 20px; 
+}
+
+
+
