--- a/CosasPollo/styles/Style_galeria.css
+++ b/CosasPollo/styles/Style_galeria.css
@@ -108,7 +108,7 @@ footer p{
     margin: 4px 2px;
     cursor: pointer;
     border-radius: 5px;
-    align-self: flex-end; 
+    align-self: auto; 
 }
 
 
