--- a/Myapp/templates/Myapp/Nosotros.html
+++ b/Myapp/templates/Myapp/Nosotros.html
@@ -1,3 +1,8 @@
+{% extends 'Myapp/base.html' %}
+
+{% load static %}
+
+{% block contenido %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,3 +15,4 @@
     <h2>aca ira el nosotros</h2>
 </body>
 </html>
+{% endblock %}
