--- a/Myapp/templates/Myapp/home.html
+++ b/Myapp/templates/Myapp/home.html
@@ -2,9 +2,6 @@
 
 {% load static %}
 
-{% load bootstrap5 %}
-
-
 {% block contenido %}
 
 <div id="contenido">
@@ -65,72 +62,131 @@
     </section>
 
     <!--========================================================== -->
-              <!-- subtexto          -->
+    <!-- subtexto          -->
     <!--========================================================== -->
-    <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
+    <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto"
+        id="intro">
         <h1 class="p-3 fs-2 border-top border-3">Una tienda de arte unica para encontrar obras de arte de todo tipo</h1>
-         <p class="p-3  fs-4">
-             <span class="text-primary">GroundZero</span> es tu lugar para encontrar las obras más populares del grupos de artistas más celebres del último tiempo.      
-         </p>   
-        </section>
+        <p class="p-3  fs-4">
+            <span class="text-primary">GroundZero</span> es tu lugar para encontrar las obras más populares del grupos
+            de artistas más celebres del último tiempo.
+        </p>
+    </section>
 
     <!--========================================================== -->
-                      <!-- Servicios -->
+    <!-- Servicios -->
     <!--========================================================== -->
 
 
     <!-- Servicios -->
     <section class="servicios seccion-clara">
         <div class="container text-center">
-          <div class="row">
-            <!-- Tejidos -->
-            <div class="columna col-12 col-md-3">
-              <i class="bi bi-scissors"></i>
-              <p class="servicios-titulo">Tejidos</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
-              <div class="badges-contenedor">
-                <span class="badge text-bg-primary">nomARTISTA </span>
-                
-              </div>
-            </div>
-            <!-- Orfebreria -->
-            <div class="columna col-12 col-md-3">
-              <i class="bi bi-brush"></i>
-              <p class="servicios-titulo">Orfebreria</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
-              <div class="badges-contenedor">
-                <span class="badge text-bg-primary"> nomARTISTA </span>
-                <span class="badge text-bg-primary"> ARTISTA </span>
-                
-               
-              </div>
-            </div>
-  
-            <!-- Esculturas-->
-            <div class="columna col-12 col-md-3">
-              <i class="bi bi-tools"></i>
-              <p class="servicios-titulo">Esculturas</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
-              <div class="badges-contenedor">
-                <span class="badge text-bg-primary">nomARTISTA </span>
-                <span class="badge text-bg-primary"> nomARTISTA </span>
-              </div>
-            </div>
-  
-            <!-- Pinturas -->
-            <div class="columna col-12 col-md-3">
-              <i class="bi bi-palette"></i>
-              <p class="servicios-titulo">Pinturas</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
-              <div class="badges-contenedor">
-                <span class="badge text-bg-primary">nomARTISTA</span>
-                <span class="badge text-bg-primary"> nomARTISTA </span>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-</div>
+            <div class="row">
+                <!-- Tejidos -->
+                <div class="columna col-12 col-md-3">
+                    <i class="bi bi-scissors"></i>
+                    <p class="servicios-titulo">Tejidos</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla
+                        scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+                    <div class="badges-contenedor">
+                        <span class="badge text-bg-primary">nomARTISTA </span>
 
+                    </div>
+                </div>
+                <!-- Orfebreria -->
+                <div class="columna col-12 col-md-3">
+                    <i class="bi bi-brush"></i>
+                    <p class="servicios-titulo">Orfebreria</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla
+                        scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+                    <div class="badges-contenedor">
+                        <span class="badge text-bg-primary"> nomARTISTA </span>
+                        <span class="badge text-bg-primary"> ARTISTA </span>
+
+
+                    </div>
+                </div>
+
+                <!-- Esculturas-->
+                <div class="columna col-12 col-md-3">
+                    <i class="bi bi-tools"></i>
+                    <p class="servicios-titulo">Esculturas</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla
+                        scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+                    <div class="badges-contenedor">
+                        <span class="badge text-bg-primary">nomARTISTA </span>
+                        <span class="badge text-bg-primary"> nomARTISTA </span>
+                    </div>
+                </div>
+
+                <!-- Pinturas -->
+                <div class="columna col-12 col-md-3">
+                    <i class="bi bi-palette"></i>
+                    <p class="servicios-titulo">Pinturas</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras laoreet, odio eget fringilla
+                        scelerisque, sem purus fringilla mauris, nec ultricies nisl nisl sit amet dolor. </p>
+                    <div class="badges-contenedor">
+                        <span class="badge text-bg-primary">nomARTISTA</span>
+                        <span class="badge text-bg-primary"> nomARTISTA </span>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--========================================================== -->
+    <!-- Artistas -->
+    <!--========================================================== -->
+
+    <section>
+        <div class="container w-50 m-auto text-center" id="equipo">
+            <h1 class="mb-5 fs-2">Artistas de todo tipo de <span class="text-primary"> excelente calidad</span>.</h1>
+            <p class="fs-4 ">Acá encontrarás todos los medios artísticos que quieras, con un catálogo que crece todos
+                los dias </p>
+        </div>
+
+        <div class="mt-5 text-center">
+            <img id="img-equipo" src="{% static 'Myapp/imagenes/tempaint.png.jpg' %}" alt="pintura" width="400px"
+                height="400px">
+        </div>
+        <br>
+        <br>
+        <br>
+        <!--========================================================== -->
+        <!-- mapa/tiempo -->
+        <!--========================================================== -->
+
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card">
+                        <!-- api -->
+                        <div class="card-header">
+                            Clima
+                        </div>
+                        <div class="card-body" id="weather">
+                            <h3 class="card-title">Viña del mar</h3>
+                            <p>Temperatura: <span id="temp"></span><i class="bi bi-thermometer-half"></i> °C</p>
+                            <p>Velocidad del Viento: <span id="wind"></span> <i class="bi bi-wind"></i>km/h</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card">
+                        <div class="card-header">
+                            ¿Donde nos ubicamos?
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title ">Calle xxxxxxxxxx</h5>
+                            <div id="map" style="width: 100%; height: 300px;"></div>
+                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua.</p>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+</div>
 {% endblock %}
