--- a/Myapp/templates/Myapp/home.html
+++ b/Myapp/templates/Myapp/home.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block extra_css %}
+<link rel="stylesheet" href="{%static 'Myapp/styles/style_index.css'%}">
+{% endblock %}
+
 {% block contenido %}
 
 <div id="contenido">
